Added github workflow file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project(Technopark_CPP)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 20)
-set(CURRENT_TASK 1)
+if (NOT CURRENT_TASK)
+    set(CURRENT_TASK 1)
+endif ()
 include(InstallLibraries.cmake)
 
 add_executable(main main.cpp)
