--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,3 +1,4 @@
 filter=-legal/copyright,-build/include_subdir,-readability/casting,-runtime/int,-runtime/printf
 extensions=c,h,cpp
 headers=h
+linelength=120
